one mixin: classes, elements/modifiers, themes, pseudo processing + unlimited nesting of pseudo classes/elements and -elemetns/modifiers

--- a/scss/_include-processing.scss
+++ b/scss/_include-processing.scss
@@ -1,7 +1,94 @@
+// list of PSEUDO-elements
+$pseudo-elements: (
+  after,
+  before,
+  cue,
+  first-letter,
+  first-line,
+  selection,
+  slotted,
+  backdrop,
+  placeholder,
+  marker,
+  spelling-error,
+  grammar-error
+);
+
+// list of PSEUDO-classes
+$pseudo-classes: (
+  // pseudo classes with nesting or function
+  // types like `pseudo-class()` NOT supported
+  active,
+  any,
+  any-link,
+  checked,
+  default,
+  defined,
+  // dir(),
+  disabled,
+  empty,
+  enabled,
+  first,
+  first-child,
+  first-of-type,
+  fullscreen,
+  focus,
+  hover,
+  indeterminate,
+  in-range,
+  invalid,
+  // lang(),
+  last-child,
+  last-of-type,
+  left,
+  link,
+  // not(),
+  // nth-child(),
+  // nth-last-child(),
+  // nth-last-of-type(),
+  // nth-of-type(),
+  only-child,
+  only-of-type,
+  optional,
+  out-of-range,
+  read-only,
+  read-write,
+  required,
+  right,
+  root,
+  scope,
+  target,
+  valid,
+  visited
+);
+
 // @mixin - helpers
 @mixin properties-processing($list) {
   @each $property, $value in $list {
-    #{$property}: $value;
+    @if type_of($value) == map {
+      $pseudo-name: $property;
+      $pseudo-properties: $value;
+      // check if in $pseudo-* lists
+      @if index($pseudo-classes, $pseudo-name) {
+        @include list-processing(
+          $pseudo-name,
+          $pseudo-properties,
+          pseudo-class
+        );
+      } @else if index($pseudo-elements, $pseudo-name) {
+        @include list-processing(
+          $pseudo-name,
+          $pseudo-properties,
+          pseudo-element
+        );
+      } @else {
+        @warn '`#{$pseudo-name}` is not pseudo element/class; will be processed as -element/--modifier; classes in 3rd+ levels nesting is NOT supported';
+        // 3rd lv of elements/modifiers nesting processing
+        @include list-processing($pseudo-name, $pseudo-properties, modifiers);
+      }
+    } @else {
+      #{$property}: $value;
+    }
   }
 }
 
@@ -40,16 +127,40 @@
     .#{$first-lvl-el-name} & {
       @include properties-processing($list);
     }
+  } @else if $type ==pseudo-class {
+    &:#{$first-lvl-el-name} {
+      @include properties-processing($list);
+    }
+  } @else if $type ==pseudo-element {
+    &::#{$first-lvl-el-name} {
+      @include properties-processing($list);
+    }
   }
 }
 
-@mixin processing($fst-lvl-el-name, $list, $map, $type) {
+@mixin all-types-processing($fst-lvl-el-name, $list, $map, $type) {
   @if type_of(nth(nth($map, 1), 2)) == map {
     // nested -elements/--modifiers
     @include map-processing($fst-lvl-el-name, $map, $type);
   } @else {
     // list of css properties
     @include list-processing($fst-lvl-el-name, $list, $type);
+  }
+}
+
+@mixin processing($type, $config, $themes: ()) {
+  @if $type == class {
+    // 4. @mixin class-processing
+    @include class-processing($config);
+  } @else if $type == modifiers {
+    // 2. @mixin modifier-processing
+    @include modifiers-processing($config);
+  } @else if $type == themes {
+    // 3. @mixin theme-processing
+    @include theme-processing($config, $themes);
+  } @else if $type ==pseudo {
+    // 5. @mixin pseudo-processing
+    @include pseudo-processing($config);
   }
 }
 
@@ -157,16 +268,21 @@
       // <<
       // (css-property-1: css-property-value-1,...)
       // >>
-      // but the second element of this first list is
+      // but the second element of this list is
       // map if we have -elements/-modifiers structure
       // ($modifier-property: modifier-property-value,..)
       // css property value in another case
       //
-      @include processing($item-key, $item-value, $modifiers-map, modifiers);
+      @include all-types-processing(
+        $item-key,
+        $item-value,
+        $modifiers-map,
+        modifiers
+      );
       //
     } @else {
       // if in $config only smth like css properties
-      @warn 'css properties in $config - no processing required. Include them in usual way!';
+      @warn 'css properties and not -elements/--modifiers on first level in $config NOT correct processing with this mixin';
     }
   }
 }
@@ -263,7 +379,6 @@
         @each $theme-key, $theme-class-name in $themes {
           $full-theme-keys-list: append($full-theme-keys-list, $theme-key);
         }
-
         // check if first item in list $item (=$item-key)
         // is exists in list $full-theme-keys-list
         @if index($full-theme-keys-list, $item-key) {
@@ -284,12 +399,12 @@
           // <<
           // (css-property-1: css-property-value-1,...)
           // >>
-          // but the second element of this first list is
+          // but the second element of this list is
           // map if we have -elements/-modifiers structure
           // ($modifier-property: modifier-property-value,..)
           // css property value in another case
           //
-          @include processing(
+          @include all-types-processing(
             $theme-class-name,
             $item-value,
             $modifiers-map,
@@ -300,7 +415,7 @@
       }
     } @else {
       // if in $config only smth like css properties
-      @warn 'css properties in $config - no processing required. Include them in usual way!';
+      @warn 'css properties and not theme-names on first level in $config NOT correct processing with this mixin';
     }
   }
 }
@@ -329,16 +444,56 @@
       // <<
       // (css-property-1: css-property-value-1,...)
       // >>
-      // but the second element of this first list is
+      // but the second element of this list is
       // map if we have -elements/-modifiers structure
       // ($modifier-property: modifier-property-value,..)
       // css property value in another case
       //
-      @include processing($item-key, $item-value, $modifiers-map, class);
+      @include all-types-processing(
+        $item-key,
+        $item-value,
+        $modifiers-map,
+        class
+      );
       //
     } @else {
       // if in $config only smth like css properties
-      @warn 'css properties in $config - no processing required. Include them in usual way!';
+      @warn 'css properties and not classes on first level in $config NOT correct processing with this mixin';
+    }
+  }
+}
+
+// 5. @mixin pseudo-processing
+@mixin pseudo-processing(
+  $config,
+  $pseudo-elements: $pseudo-elements,
+  $pseudo-classes: $pseudo-classes
+) {
+  @each $item in $config {
+    $item-key: nth($item, 1);
+    $item-value: nth($item, 2);
+    // check if second element in $item is map
+    // (set of modifiers/css properties)
+    // and not css property value alone
+    @if type_of($item-value) == map {
+      $pseudo-name: $item-key;
+      $pseudo-properties: $item-value;
+      // check if in $pseudo-* lists
+      @if index($pseudo-classes, $pseudo-name) {
+        @include list-processing(
+          $pseudo-name,
+          $pseudo-properties,
+          pseudo-class
+        );
+      } @else if index($pseudo-elements, $pseudo-name) {
+        @include list-processing(
+          $pseudo-name,
+          $pseudo-properties,
+          pseudo-element
+        );
+      }
+    } @else {
+      @warn 'css properties and not pseudo-elements/classes on first level in $config NOT correct processing with this mixin';
     }
   }
 }
